# MFDedup

./: CMakeLists.txt  README.md  main.cpp
ArrangementPipeline/: ArrangementFilterPipeline.h  ArrangementReadPipeline.h  ArrangementWritePipeline.h
DedupPipeline/: ChunkingPipeline.h  DeduplicationPipeline.h  Eliminater.h  Eliminator.h  GCPipieline.h  HashingPipeline.h  ReadFilePipeline.h  WriteFilePipeline.h
MetadataManager/: MetadataManager.h
Pipeline/: ChunkingPipeline.h  DeduplicationPipeline.h  GCPipieline.h  HashingPipeline.h  ReadFilePipeline.h  RestorePipleline.h  WriteFilePipeline.h
RestorePipeline/: RestoreParserPipeline.h  RestorePipleline.h  RestoreReadPipeline.h  RestoreWritePipeline.h
RollHash/: Gear.h  Rabin.h  RollHash.h  md5.c  md5.h  rabin_chunking.cpp  rabin_chunking.h
Test/: ReadPerformance.cpp  readTest.cpp
Utility/: BufferedFileWriter.h  ChunkWriterManager.h  Config.h  FileOperator.h  Likely.h  Lock.cpp  Lock.h  Manifest.h  Noncopyable.h  StorageTask.h  xxhash.c  xxhash.h
example/: config.toml  fileList
gflags-2.2.2/: CMakeLists.txt  appveyor.yml
gflags-2.2.2/cmake/: execute_test.cmake  utils.cmake
gflags-2.2.2/src/: config.h  gflags.cc  gflags.h.in  gflags_completions.cc  gflags_completions.h.in  gflags_declare.h.in  gflags_ns.h.in  gflags_reporting.cc  mutex.h  util.h  windows_port.cc  windows_port.h
gflags-2.2.2/test/: CMakeLists.txt  gflags_build.py.in  gflags_declare_flags.cc  gflags_declare_test.cc  gflags_strip_flags_test.cc  gflags_strip_flags_test.cmake  gflags_unittest.cc
gflags-2.2.2/test/config/: CMakeLists.txt  (+1 more)
(+2 files in other folders)
